fixes #2908 slot player title text overlapping action buttons

--- a/app/assets/volume/slot.styl
+++ b/app/assets/volume/slot.styl
@@ -47,6 +47,7 @@
   padding-bottom b4
   margin-bottom b4
   position relative
+  width 100%
   dl 
     display block
   dt 
@@ -58,9 +59,8 @@
     display block
 
 .player-main-info-actions
-  position absolute
-  top 0
-  right 0
+  position relative
+  float right
   .classification
     height 19px
   span img
